# AutoML2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  readthedocs.yml  requirements.txt  test.ipynb  walkthrough.html  walkthrough.ipynb
.github/workflows/: ci.yaml  pre-commit.yaml  tests.yml
debug/: ensembles_check.py
docs/source/: conf.py  index.rst  installation.rst  mamut.rst  modules.rst
mamut/: evaluation.py  model_selection.py  preprocessing.py  utils.py  wrapper.py
mamut/mamut_report/: report.html  training_summary.html
mamut/preprocessing/: handlers.py  preprocessing.py  settings.py
mamut/utils/: report_template.html  utils.py
package_name/: evaluation.py  model_selection.py  preprocessing.py  utils.py  wrapper.py
tests/: mock.py  test_iris.py  test_preprocessing.py  test_test.py  test_wrapper.py
tests/unit/: test_preprocessing.py
