[tool.poetry]
name = "mamut"
version = "0.1.0"
description = "Machine Automated Modelling and Utility Toolkit"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
optuna = "^4.1.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
xgboost = "^2.1.3"
numpy = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.isort]
profile = "black"
